--- a/style.css
+++ b/style.css
@@ -3,6 +3,124 @@ body {
   font-family: "Open Sans";
 }
 
+/*Vertical Flip*/
+.verticalFlip {
+  display: inline;
+  text-indent: 8px;
+}
+.verticalFlip span {
+  animation: vertical 12.5s linear infinite 0s;
+  -ms-animation: vertical 12.5s linear infinite 0s;
+  -webkit-animation: vertical 12.5s linear infinite 0s;
+  color: snow;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+}
+.verticalFlip span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+.verticalFlip span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+.verticalFlip span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+.verticalFlip span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
+}
+
+/*Vertical Flip Animation*/
+@-moz-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -moz-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -moz-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -webkit-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-ms-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -ms-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -ms-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 /* ------- */
 /* TOOLBAR */
 /* ------- */
@@ -63,7 +181,7 @@ body {
   font-size: 32px;
   border-radius: 10px;
   font-family: "Open Sans";
-  border: black solid 1px;
+  border: black solid 5px;
 
   padding-top: 10px;
   padding-bottom: 10px;
@@ -125,10 +243,10 @@ html {
 
 #ourSlogan {
   text-align: center;
-  font-size: 70px;
+  font-size: 90px;
   display: block;
-  margin: 100px auto;
-  width: 70%;
+  margin: 200px auto;
+  width: 55%;
   position: absolute;
   left: 15%;
 }
@@ -143,14 +261,14 @@ html {
   color: rgb(32, 27, 27) !important;
   text-transform: uppercase;
   background: snow;
-  padding: 60px;
-  border-radius: 5px;
+  padding: 70px;
+  border-radius: 50px;
   display: inline-block;
   border: none;
   font-family: Raleway;
   font-size: 30px;
   text-decoration: none;
-  margin-top: 520px;
+  margin-top: 400px;
 }
 
 .example_a:hover {
