--- a/web/style.css
+++ b/web/style.css
@@ -277,7 +277,7 @@ html {
   border-radius: 50px;
   display: inline-block;
   border: none;
-  font-family: Raleway;
+  font-family: "Arial";
   font-size: 30px;
   text-decoration: none;
   margin-top: 400px;
@@ -290,12 +290,13 @@ html {
   -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
   box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
   transition: all 0.4s ease 0s;
+  color: white !important;
 }
 
 .button_cont {
   position: inherit;
   font-weight: bold;
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway";
 }
 
 p {
