--- a/web/test.css
+++ b/web/test.css
@@ -10,7 +10,7 @@ body {
 .underbar {
     width: 100%;
     height: 8vh;
-    background-color: rgb(55, 133, 221);
+    background-color: rgb(3, 62, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,12 +26,15 @@ body {
     color: white;
     text-transform: uppercase;
     border: 3px solid white;
-    background: rgb(55, 133, 221);
+    background: rgb(3, 62, 255);
     border-radius: 50px;
     font-family: "Arial";
-    font-size: 20px;
+    font-size: 125%;
     text-align: center;
-    text-decoration: none
+    text-decoration: none;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .filler-button:hover {
