--- a/web/test.css
+++ b/web/test.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 *, *:before, *:after {
@@ -51,4 +52,30 @@ body {
 
 .antenna-icon-small svg {
     transform: scale(0.5);
+}
+
+#density {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 999;
+    height: 128px;
+}
+
+#coverage {
+    position: absolute;
+    top: 168px;
+    right: 20px;
+    z-index: 999;
+    height: 128px;
+}
+
+#density,
+#coverage {
+    display: none;
+}
+
+#density.active,
+#coverage.active {
+    display: block;
 }
