--- a/web/test.css
+++ b/web/test.css
@@ -29,13 +29,15 @@ body {
     border: 3px solid white;
     background: rgb(3, 62, 255);
     border-radius: 50px;
-    font-family: "Arial";
+    font-family: "Arial", sans-serif;
     font-size: 125%;
     text-align: center;
     text-decoration: none;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    transition: all 0.2s ease 0s;
+    cursor: pointer;
 }
 
 .filler-button:hover {
@@ -43,7 +45,6 @@ body {
     letter-spacing: 1px;
     transition: all 0.4s ease 0s;
     color: rgb(22, 21, 21);
-    border: none;
 }
 
 .antenna-icon-big svg {
